--- a/bio.Rmd
+++ b/bio.Rmd
@@ -1,10 +1,9 @@
 ---
 title: "Bio"
-description: "My profession path:"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-I’m currently a masters student pursuing a degree in Environmental Data Science at UC Santa Barbara’s Bren School of Environmental Science and Management. I spent my undergraduate years studying Ecology and Field Biology at the University of North Carolina at Asheville. My entry into the realm of environmental research began with a technician position with the US Forest Service, conducting field work for hemlock woolly adelgid studies. Following this path, I pursued my own undergraduate research looking at the habitat preferences of two orchid species in Western North Carolina, and spent another field season collecting and analyzing data for a forest gap and regeneration study through NC State University. Wanting to try my hand at education and get more involved in my community, I spent nearly three years as the Environmental Educator for a small nonprofit in Asheville. During this time I started teaching myself to code and found myself drawn to the idea of applying data science techniques to combat environmental issues. I hope to use the environmental data science degree I’m working towards to assess the use of emerging technologies in the fight against climate change.
+I’m currently pursuing a masters degree in Environmental Data Science at UC Santa Barbara’s Bren School of Environmental Science and Management. I spent my undergraduate years studying ecology at the University of North Carolina at Asheville. I entered the realm of environmental research as a technician with the US Forest Service, conducting field work for several studies concerning eastern hemlock decline. Following this path, I pursued my own undergraduate research looking at the habitat preferences of two orchid species in Western North Carolina, and spent another field season collecting and analyzing data for a forest gap and regeneration study with NC State University. Wanting to try my hand at education and to get more involved in my community, I spent nearly three years as the Environmental Educator for a small nonprofit in Asheville. During this time I started teaching myself to code and was drawn to the idea of applying data science techniques to combat environmental issues. I hope to use the environmental data science degree I’m working towards to assess the use of emerging technologies in the fight against climate change.
